# kriegspiel

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  kriegspiel.cabal  package.yaml  refactor.diff  stack.yaml
app/: Main.hs
kriegspiel.hsproj/: .uuid
kriegspiel.hsproj/kriegspiel/: Board.hs  LICENSE  Main.hs  kriegspiel.cabal  package.yaml  stack.yaml
kriegspiel.hsproj/kriegspiel/src/: Main.hs
src/: Board.hs  BoardView.hs  ChessUtils.hs  Controller.hs  Main.hs  Model.hs  Options.hs  PieceRules.hs  View.hs
