name: kriegspiel
version: 1.0
cabal-version: 1.22
build-type: Simple
license: OtherLicense
license-file: LICENSE
stability: experimental
data-files:
    images/w_pawn_png_withShadow.png
    "images/square brown light_png.png"
    images/w_rook_png_withShadow.png
    images/w_knight_png_withShadow.png
    images/b_knight_png_withShadow.png
    images/b_bishop_png_withShadow.png
    images/b_rook_png_withShadow.png
    images/b_king_png_withShadow.png
    images/b_queen_png_withShadow.png
    images/w_bishop_png_withShadow.png
    "images/square brown dark_png.png"
    "images/square gray dark _png.png"
    images/w_queen_png_withShadow.png
    "images/square gray light _png.png"
    images/b_pawn_png_withShadow.png
    images/w_king_png_withShadow.png
    LICENSE
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable kriegspiel
    main-is: Main.hs
    build-depends:
        containers -any,
        foundation -any,
        directory -any,
        base -any,
        helm -any,
        linear -any,
        filepath -any
    default-language: Haskell2010
    other-modules:
        Board

